corrected imports from notebooks, added install instructions on the README file

--- a/examples/beast_plotting.ipynb
+++ b/examples/beast_plotting.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "import numpy as np, matplotlib.pyplot as plt, csv, os\n",
     "from mpl_toolkits.axes_grid1.axes_divider import make_axes_locatable\n",
-    "from beast_functions import *"
+    "from holopy.utils.beast_functions import *"
    ]
   },
   {
