--- a/examples/hex_piston_model.ipynb
+++ b/examples/hex_piston_model.ipynb
@@ -23,7 +23,7 @@
     "from mpl_toolkits.axes_grid1.axes_divider import make_axes_locatable\n",
     "from functions import points_vector_builder, focus_phasemap_builder\n",
     "from plotting_functions import *\n",
-    "from PM_functions import *"
+    "from holopy.algorithms.piston_model import *"
    ]
   },
   {
